--- a/07-references.Rmd
+++ b/07-references.Rmd
@@ -2,6 +2,6 @@
 <!-- # References -->
 `r if (knitr:::is_html_output()) '# References {-}'`
 
-<!-- <div id="refs"></div> -->
+<div id="refs"></div>
 
 
