--- a/preamble.tex
+++ b/preamble.tex
@@ -33,7 +33,7 @@
 \newcommand{\thesisSecondReviewerUniversity}{\protect{Johannes Gutenberg University Mainz}}
 \newcommand{\thesisSecondReviewerDepartment}{Faculty of Biology and Center for Computational Sciences in Mainz}
 
-\newcommand{\thesisFirstSupervisor}{Miguel Andrade}
+\newcommand{\thesisFirstSupervisor}{Prof. Dr. Miguel Andrade-Navarro}
 \newcommand{\thesisSecondSupervisor}{}
 
 \newcommand{\thesisUniversity}{\protect{Johannes Gutenberg University Mainz}}
@@ -61,7 +61,8 @@
     hangfigurecaption=false,%
     hangsection=true,%
     hangsubsection=true,%
-    colorize=full,%
+    % colorize=full,%
+    colorize=bw,%
     colortheme=jgured,%
     % bibsys=bibtex,%
     % bibfile=bib-refs,%
