--- a/04-position_effect.Rmd
+++ b/04-position_effect.Rmd
@@ -162,7 +162,7 @@ breakpoints with regulatory elements (E = enhancer, DHS = DNaseI
 hypersensitive sites, CTCF = CTCF binding sites), and TADs from H1-hESC,
 IMR90, and GM12878 (1= one breakpoint within TAD, 2=both BCA breakpoints
 are located within TAD). Top-ranking position effect genes are provided
-for the ±1 Mb windows surrounding the BCA breakpoints; each gene is
+for the +-1 Mb windows surrounding the BCA breakpoints; each gene is
 highlighted with different evidence supporting its inclusion (a =
 ClinGen known recessive genes, b= ClinGen genes with emerging and
 sufficient evidence suggesting haploinsufficiency is associated with
@@ -170,7 +170,7 @@ clinical phenotype, c = HI scores less than 10, d = within H1-ESC TAD, e
 = DHS enhancer-promoter disrupted interactions).
 
 ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-**Subject ID and Reported Karyotype**             **Disruption of Functional Elements** **Breakpoints within TADs (hESC / IMR90 / GM12878)**   **Top-ranking Candidates +/-1 Mb **
+**Subject ID and Reported Karyotype**             **Disruption of Functional Elements** **Breakpoints within TADs (hESC / IMR90 / GM12878)**   **Top-ranking Candidates +-1 Mb **
 ----------------------------------------------    ------------------------------------- -------------------------------------------------   -----------------------------------
 **DGAP017**      *46,X,t(X;10)(p11.2;q24.3)*       DHS                                   2/2/1                                              -
 
@@ -209,7 +209,7 @@ clinical phenotype, c = HI scores less than 10, d = within H1-ESC TAD, e
 ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
 
-  <!-- **Subject ID**   **Reported Karyotype**          **Disruption of Functional Elements**   **Breakpoints within <br>TADs (hESC / IMR90 / GM12878)**   **Top-ranking Candidates ±1 Mb ** -->
+  <!-- **Subject ID**   **Reported Karyotype**          **Disruption of Functional Elements**   **Breakpoints within <br>TADs (hESC / IMR90 / GM12878)**   **Top-ranking Candidates +-1 Mb ** -->
   <!-- ---------------- ------------------------------- ------------------------------------- ----------------------------------------------------   ----------------------------------- -->
   <!-- **DGAP017**      46,X,t(X;10)(p11.2;q24.3)       DHS                                   2 / 2 / 1                                              - -->
   <!-- **DGAP111**      46,XY,t(16;20)(q11.2;q13.2)dn   CTCF                                  1 / 1 / 2                                              *ORC6^a^* -->
@@ -234,7 +234,7 @@ clinical phenotype, c = HI scores less than 10, d = within H1-ESC TAD, e
 ###  Analysis of genes bordering the rearrangement breakpoints
 
 The presence of annotated genes or pseudogenes and lincRNAs was assessed
-in windows of ±3 and ±1 Mb neighboring each subject's translocation and
+in windows of +-3 and +-1 Mb neighboring each subject's translocation and
 inversion breakpoints, and within reported H1-hESC topologically
 associated domains (TADs)[@Dixon2012] where the breakpoints were located. The
 gene annotation file was obtained from Ensembl GRCh37 archive,[@Flicek2014] and
@@ -287,7 +287,7 @@ phenomatch score quantiﬁes the information content of the most speciﬁc
 HPO term that is part of or a common ancestor (more general term) of a
 set of phenotypes. Our set of phenotypes is constituted by the HPO terms
 associated to DGAP cases and the ones annotated to candidate position
-effect genes within windows of ±3 and ±1 Mb of sequence in proximity to
+effect genes within windows of +-3 and +-1 Mb of sequence in proximity to
 the breakpoints. We used two background models to assess signiﬁcance of
 this similarity. The ﬁrst is based on randomly permuting the
 associations of phenotypes to genes; to this effect, the phenotype-gene
@@ -413,9 +413,9 @@ regulatory interactions of neighboring genes (see Discussion).
 
 To identify genes which could be generating the complex DGAP phenotypes
 via position effects from chromosome rearrangements, we analyzed all
-annotated genes within windows of ±3 and ±1 Mb proximal and distal to
+annotated genes within windows of +-3 and +-1 Mb proximal and distal to
 the breakpoints, and within the BCA-containing H1-hESC reported TAD
-positions. A total of 3081 genes were contained within the ±3 and ±1 Mb
+positions. A total of 3081 genes were contained within the +-3 and +-1 Mb
 windows for all cases; 106 of these genes (\~3.4%) have an HI score of
 &lt;10%, which is a predictor of haploinsufficiency,[@Huang2010] and 55 and two
 genes have ClinGen emerging evidence suggesting that dosage
@@ -439,7 +439,7 @@ is then calculated based on randomly permuting the associations of
 phenotypes to genes, and in shifting the DGAP translocation and
 inversion breakpoint positions along the chromosome. We obtained
 phenomatch scores ranging from 0.003 to 91.48 for 179 genes within the
-±3 and ±1 Mb windows, as well as within the TAD positions ([Table S](#position-effect-sub-tab)15).
++-3 and +-1 Mb windows, as well as within the TAD positions ([Table S](#position-effect-sub-tab)15).
 
 In addition to dosage sensitivity and phenotypic similarity information,
 we complemented our analysis with assessment of enhancer-promoter
@@ -450,7 +450,7 @@ regions.[@Kleinjan2005; @Kleinjan1998] We therefore reasoned that genes and enha
 included in predicted enhancer-promoter interactions would be strong
 position effect candidates. We used the ENCODE distal
 DHS/enhancer–promoter connections[@Thurman2012] to assess disrupted predicted
-*cis*-regulatory interactions by the DGAP breakpoints within a ±500 Kb
+*cis*-regulatory interactions by the DGAP breakpoints within a +-500 Kb
 window. The analysis revealed 193 genes that were separated from their
 predicted candidate enhancers, potentially altering gene expression
 ([Table S](#position-effect-sub-tab)13). A total of 133 candidate genes were separated from &lt;10
@@ -460,7 +460,7 @@ predicted interactions with 10 or up to 91 enhancers ([Table S](#position-effect
 For the 17 analyzed DGAP BCAs, there are a total of 645 genes with
 either evidence of dosage sensitivity, disrupted enhancer-promoter
 interactions, or significant phenotypic similarity. This represents
-\~21% of the genes contained within the ±3 Mb windows, clearly an
+\~21% of the genes contained within the +-3 Mb windows, clearly an
 undesirable number for timely clinical interpretation and functional
 analyses. To filter the most promising candidates, we ranked them using
 their reported dosage sensitivity, disrupted regulatory interactions,
@@ -471,7 +471,7 @@ values of the reported phenomatch scores per case and adding up their
 dosage sensitivity and disrupted regulatory interaction data, we
 consistently ranked the reported pathogenic and likely pathogenic genes
 in the upper decile for 52 out of the 57 control DGAP cases (\~91%) when
-considering candidates within the TAD and ±1 Mb analysis windows (Table
+considering candidates within the TAD and +-1 Mb analysis windows (Table
 S17). 32 of these genes were the top-ranking candidates in their
 corresponding DGAP case, while 19 of them were positioned in the
 second-tier rank. Only five genes could not be found in the top decile
@@ -480,9 +480,9 @@ their inclusion.
 
 Applying this ranking strategy to the 17 non-coding BCAs, we predict 16
 top-ranking candidates for 11 DGAP cases and 102 second-tier candidates
-for the 17 analyzed DGAP cases within ±1 Mb analysis windows (Table \@ref(tab:position-effect-subjects)
+for the 17 analyzed DGAP cases within +-1 Mb analysis windows (Table \@ref(tab:position-effect-subjects)
 and [Table S](#position-effect-sub-tab)15). This is a significant reduction compared to the initial
-645 possible candidates (\~3.8% of the neighboring genes in the ±3 Mb
+645 possible candidates (\~3.8% of the neighboring genes in the +-3 Mb
 windows considering top and second-tier candidates, and only 0.05%
 considering top candidates only). Of note, only nine of the 16
 top-ranking candidates are included within the same TAD as the BCA
@@ -641,7 +641,7 @@ diagnosis. Utilizing publicly available annotated genomic and regulatory
 elements, chromatin conformation capture information, predicted
 enhancer-promoter interactions, phenomatch scores, as well as
 haploinsufficiency and triplosensitivity information for all genes
-surrounding the BCA breakpoints at different window sizes (±3 and ±1 Mb
+surrounding the BCA breakpoints at different window sizes (+-3 and +-1 Mb
 as well as BCA-containing TAD positions), we discovered 16 genes for 11
 DGAP cases that are top-ranking position effect candidates for the
 subjects’ clinical phenotypes (Table \@ref(tab:position-effect-subjects)).
@@ -718,7 +718,7 @@ well as HI scores build upon this selection, and can help laboratories
 and clinicians focus in subsequent analyses on candidates of their
 interest. As of now, the “top-ranking” candidates have the highest
 number of evidence supporting their selection; however, there are also
-102 second-tier candidates for the 17 analyzed DGAP cases within ±1 Mb
+102 second-tier candidates for the 17 analyzed DGAP cases within +-1 Mb
 analysis windows which may well play a functional role. Presently, we
 are unable to give “weights” to any of these selection criteria (*i.e*.,
 a gene with a high phenomatch score and no evidence of HI is “more
@@ -782,6 +782,7 @@ hope to study additional cases with complete phenotypic information and
 be able to refine better the rules for the prediction of position
 effects on gene expression and discover new mechanisms of pathogenicity.
 
+## Declarations {-}
 
 ### Acknowledgements {-}
 
@@ -792,7 +793,7 @@ and for referrals to our project. This study was funded by the National
 Institutes of Health (GM061354 to CCM and MET). The authors declare no
 conflicts of interest.
 
-### Web Resources
+### Web Resources {-}
 
 The scripts used in this study to predict position effects can be
 downloaded from:
