--- a/06-discussion.Rmd
+++ b/06-discussion.Rmd
@@ -1,7 +1,7 @@
 # Discussion {#thesis-discussion}
 
 Recent developments in proximity-ligation methods allow to measure pairwise chromatin interactions genome-wide. Resulting interaction maps revealed a hierarchical organization of genome folding with the property of interphase chromosomes to fold into frequently interacting domains, called TADs. 
-This non-random organization lead to many fundamental questions of how genome folding contributes to functional segregation in genomes and how domain organization ensures precise regulation of gene expression (see chapter [1](#intro)).
+This non-random organization lead to many fundamental questions of how genome folding contributes to functional segregation in genomes and how domain organization ensures precise regulation of gene expression (Chapter [1](#intro)).
 
 Chromatin interaction data can be integrated computationally with one-dimensional measurements along the genome. This allows to annotate folding structures with diverse functional data such as epigenetic marks, protein binding signals, tissue-specific gene expression, or sequence conservation across genomes. Work in this thesis applied such approaches to analyze the function of TADs for gene regulation in the contexts of evolution and diseases. The results highlight the role of TADs as regulatory environments for gene expression, their stability during millions of years of evolution as well as their disruptions by disease-associated genetic variants. Furthermore, recent insights into molecular mechanisms of chromatin loop formation are used to predict long-range interactions genome-wide from protein binding data. 
 
@@ -350,7 +350,7 @@ Therefore, TADs represent productive nests for novel genes in evolution.
 Consistently, TADs are conserved across million years of evolution. 
 Furthermore, stable TADs are associated with conserved expression profiles of genes. 
 
-Disruption of TADs by rearrangements is associated with changes in gene expression profiles during evolution as well as in genomes of subjects with developmental diseases. 
+Disruption of TADs by rearrangements is associated with changes in gene expression profiles during evolution as well as in genomes of subjects with neurodevelopmental syndromes. 
 While these disruptions of TADs might be beneficial for an organism and lead to evolutionary leaps in some cases, we show in disease genomes, that disruptions of TADs can result in pathological phenotypes. 
 Therefore, the three-dimensional folding structure of genomes, including TADs and enhancer-promoter interactions has to be considered for the interpretation of genomic variants of patient genomes.  
 
