--- a/layout_content/titlepages.tex
+++ b/layout_content/titlepages.tex
@@ -77,7 +77,8 @@
 	\textit{\thesisTitle} \\
 	\thesisSubject, \thesisDate \\
 	Reviewers: \thesisFirstReviewer\ and \thesisSecondReviewer \\
-	Supervisors: \thesisFirstSupervisor\ and \thesisSecondSupervisor \\[1.5em]
+	% Supervisors: \thesisFirstSupervisor\ and \thesisSecondSupervisor \\[1.5em]
+	Supervisor: \thesisFirstSupervisor \\[1.5em]
 	\textbf{\thesisUniversity} \\
 	\textit{\thesisUniversityGroup} \\
 	\thesisUniversityInstitute \\
